update: statistics by time